--- a/public/locales/ar/accessibilityStatement.json
+++ b/public/locales/ar/accessibilityStatement.json
@@ -1,23 +1,153 @@
 {
     "title": "بيان إمكانية الوصول",
-    "description": "التزامنا بإمكانية الوصول على الويب",
-    "lastUpdated": "آخر تحديث: ديسمبر 2024",
+    "description": "التزامنا بإمكانية الوصول لجميع المرضى",
+    "lastUpdated": "آخر تحديث: أكتوبر 2025",
     "sections": {
-        "commitment": {
-            "title": "التزامنا",
-            "content": "ممارسة الدكتور سيرجي تونيتسكي الطبية ملتزمة بضمان إمكانية الوصول الرقمي لجميع المستخدمين، بما في ذلك ذوي الإعاقة. نسعى لتقديم تجربة يمكن الوصول إليها وشاملة لجميع من يزور موقعنا الإلكتروني."
+        "philosophy": {
+            "title": "1. فلسفتنا في إمكانية الوصول",
+            "content": "تعتبر عيادة الدكتور سيرج تونيتسكي الطبية أن إمكانية الوصول حق أساسي لكل مريض. نحن نسعى لضمان المساواة في الوصول إلى خدماتنا المادية والموارد الرقمية."
         },
-        "standards": {
-            "title": "معايير إمكانية الوصول",
-            "content": "نسعى للامتثال لمعايير إرشادات إمكانية الوصول لمحتوى الويب (WCAG) 2.1 المستوى AA. موقعنا الإلكتروني مصمم ليكون في متناول المستخدمين ذوي الإعاقات المختلفة، بما في ذلك البصرية والسمعية والجسدية والكلامية والمعرفية والعصبية."
+        "physicalAccessibility": {
+            "title": "2. إمكانية الوصول إلى العيادة المادية",
+            "generalInfo": "معلومات عامة:",
+            "features": [
+                "مداخل وممرات يمكن الوصول إليها",
+                "مواقف سيارات للأشخاص ذوي القدرة المحدودة على الحركة",
+                "مكتب استقبال على ارتفاع يسهل الوصول إليه",
+                "مراحيض يمكن الوصول إليها"
+            ],
+            "specializedServices": "خدمات متخصصة:",
+            "services": [
+                "خدمة المرافقة من قبل الموظفين (بترتيب مسبق)",
+                "المساعدة في ملء المستندات",
+                "تنسيقات اتصال بديلة"
+            ]
         },
-        "features": {
-            "title": "ميزات إمكانية الوصول",
-            "content": "موقعنا الإلكتروني يتضمن ميزات مثل التنقل بلوحة المفاتيح والتوافق مع قارئات الشاشة وخيارات التباين العالي والنص القابل لتغيير الحجم والنص البديل للصور. نوفر أيضاً خيارات متعددة اللغات لخدمة مجتمع المرضى المتنوع لدينا."
+        "webAccessibility": {
+            "title": "3. إمكانية الوصول إلى الموقع",
+            "compliance": "الامتثال للمعايير:",
+            "standards": [
+                "WCAG 2.1 المستوى AA - 95٪ امتثال",
+                "المعيار الإسرائيلي TI 5568",
+                "توجيه الاتحاد الأوروبي لإمكانية الوصول إلى المواقع"
+            ],
+            "implementedFeatures": "الميزات المطبقة:",
+            "visualImpairment": {
+                "title": "للمستخدمين ذوي الإعاقة البصرية:",
+                "features": [
+                    "التنقل الكامل بلوحة المفاتيح",
+                    "متوافق مع JAWS و NVDA و VoiceOver",
+                    "نصوص بديلة للصور",
+                    "تباين عالي (4.5:1)",
+                    "تكبير النص حتى 200٪"
+                ]
+            },
+            "hearingImpairment": {
+                "title": "للمستخدمين ذوي الإعاقة السمعية:",
+                "features": [
+                    "بديل نصي للمحتوى الصوتي",
+                    "نماذج ملاحظات يمكن الوصول إليها",
+                    "تنقل مرئي واضح"
+                ]
+            },
+            "motorLimitations": {
+                "title": "للمستخدمين ذوي القيود الحركية:",
+                "features": [
+                    "التنقل بلوحة المفاتيح",
+                    "وقت كافٍ للتفاعل",
+                    "ترتيب تركيز منطقي"
+                ]
+            },
+            "cognitiveImpairment": {
+                "title": "للمستخدمين ذوي الإعاقات المعرفية:",
+                "features": [
+                    "لغة بسيطة وواضحة",
+                    "تنقل متسق",
+                    "تقليل المشتتات"
+                ]
+            }
+        },
+        "languageSupport": {
+            "title": "4. الدعم متعدد اللغات",
+            "fullSupport": "دعم كامل (3 لغات رئيسية):",
+            "mainLanguages": [
+                "🇬🇧 الإنجليزية - جميع الصفحات والمحتوى الكامل",
+                "🇷🇺 الروسية - النسخة الكاملة للموقع",
+                "🇮🇱 العبرية - جميع المواد متاحة"
+            ],
+            "basicSupport": "دعم أساسي (4 لغات إضافية):",
+            "additionalLanguages": [
+                "🇩🇪 الألمانية - الصفحات الرئيسية والتنقل",
+                "🇦🇪 العربية - الأقسام الرئيسية للموقع",
+                "🇫🇷 الفرنسية - المحتوى الرئيسي",
+                "🇪🇸 الإسبانية - الصفحات الأساسية"
+            ],
+            "features": "الميزات:",
+            "featuresList": [
+                "جميع اللغات السبع لديها دعم كامل لميزات إمكانية الوصول",
+                "الواجهة والتنقل يعملان بجميع اللغات",
+                "ميزات إمكانية الوصول (قارئات الشاشة، التنقل بلوحة المفاتيح، التباين) تعمل بشكل متساوٍ عبر جميع إصدارات اللغة",
+                "التوسع التدريجي للمحتوى إلى لغات إضافية"
+            ],
+            "note": "نحن نعمل باستمرار على تحسين الدعم متعدد اللغات وترجمة محتوى إضافي."
+        },
+        "technicalInfo": {
+            "title": "5. معلومات تقنية",
+            "testedIn": "تم الاختبار في: Chrome و Firefox و Safari و Edge",
+            "mobileSupport": "دعم الهاتف المحمول: استجابة كاملة",
+            "recommendedScreenReader": "قارئ الشاشة الموصى به: NVDA (أحدث إصدار)"
+        },
+        "limitations": {
+            "title": "6. القيود المعروفة",
+            "intro": "نحن نعمل باستمرار على التحسينات ونعترف بالمجالات التالية للتطوير:",
+            "items": [
+                "الأدوات من طرف ثالث: قد يكون لها إمكانية وصول محدودة",
+                "النماذج الطبية المعقدة: تتطلب تحسينًا إضافيًا",
+                "المواد الأرشيفية: قد لا تلتزم بالكامل بالمعايير"
+            ]
+        },
+        "alternativeFormats": {
+            "title": "7. تنسيقات المعلومات البديلة",
+            "intro": "إذا لم تتمكن من الوصول إلى المعلومات على موقعنا، فسنوفرها بتنسيق بديل:",
+            "formats": [
+                "نسخة مطبوعة",
+                "تنسيق صوتي (خلال 7 أيام عمل)",
+                "نص مبسط",
+                "استشارة شخصية"
+            ]
         },
         "feedback": {
-            "title": "التعليقات والاتصال",
-            "content": "إذا واجهت عوائق في إمكانية الوصول أو لديك اقتراحات للتحسين، يرجى الاتصال بنا. نقدر تعليقاتك وملتزمون بمعالجة مشاكل إمكانية الوصول في الوقت المناسب."
-        }
+            "title": "8. الملاحظات والدعم",
+            "intro": "نرحب بملاحظاتك واقتراحاتك لتحسين إمكانية الوصول.",
+            "contactInfo": "معلومات الاتصال:",
+            "email": "📧 البريد الإلكتروني: drtunitski@gmail.com",
+            "phone": "📞 الهاتف: 0507377870",
+            "address": "📍 عنوان العيادة: إيلي لانداو 7، هرتسليا، إسرائيل",
+            "responseTime": "أوقات الاستجابة:",
+            "responseTimes": [
+                "الرد الأولي: يومي عمل",
+                "حل المشاكل: حتى 7 أيام عمل",
+                "الإصلاحات المعقدة: حتى 30 يومًا"
+            ]
+        },
+        "legalBasis": {
+            "title": "9. الأساس القانوني",
+            "intro": "تستند سياسة إمكانية الوصول لدينا على:",
+            "laws": [
+                "قانون المساواة في الحقوق للأشخاص ذوي الإعاقة (5758-1998)",
+                "توجيه الاتحاد الأوروبي لإمكانية الوصول إلى المواقع",
+                "إرشادات إمكانية الوصول إلى محتوى الويب (WCAG) 2.1"
+            ]
+        },
+        "futureImprovements": {
+            "title": "10. التحسينات المستقبلية",
+            "plan": "خطة عام 2026:",
+            "improvements": [
+                "توسيع الدعم متعدد اللغات",
+                "تحسينات إمكانية الوصول عبر الهاتف المحمول",
+                "عمليات تدقيق منتظمة لإمكانية الوصول"
+            ]
+        },
+        "footer": "نحن ملتزمون بالتحسين المستمر لإمكانية الوصول إلى خدماتنا ونرحب باقتراحاتك."
     }
 }
