--- a/public/locales/he/accessibilityStatement.json
+++ b/public/locales/he/accessibilityStatement.json
@@ -1,23 +1,153 @@
 {
     "title": "הצהרת נגישות",
-    "description": "המחויבות שלנו לנגישות אינטרנט",
-    "lastUpdated": "עדכון אחרון: דצמבר 2024",
+    "description": "המחויבות שלנו לנגישות עבור כל המטופלים",
+    "lastUpdated": "עדכון אחרון: אוקטובר 2025",
     "sections": {
-        "commitment": {
-            "title": "המחויבות שלנו",
-            "content": "הפרקטיקה הרפואית של ד\"ר סרג'י טוניצקי מחויבת להבטיח נגישות דיגיטלית לכל המשתמשים, כולל אלה עם מוגבלויות. אנחנו שואפים לספק חוויה נגישה ומכילה לכל מי שמבקר באתר שלנו."
+        "philosophy": {
+            "title": "1. פילוסופיית הנגישות שלנו",
+            "content": "מרפאת ד\"ר סרג' טוניצקי רואה בנגישות זכות יסוד של כל מטופל. אנו שואפים להבטיח גישה שווה הן לשירותים הפיזיים והן למשאבים הדיגיטליים שלנו."
         },
-        "standards": {
-            "title": "סטנדרטי נגישות",
-            "content": "אנחנו שואפים לעמוד בסטנדרטים של הנחיות נגישות תוכן האינטרנט (WCAG) 2.1 רמה AA. האתר שלנו מעוצב להיות נגיש למשתמשים עם מוגבלויות שונות, כולל ויזואליות, שמיעתיות, פיזיות, דיבור, קוגניטיביות ונוירולוגיות."
+        "physicalAccessibility": {
+            "title": "2. נגישות המרפאה הפיזית",
+            "generalInfo": "מידע כללי:",
+            "features": [
+                "כניסות ומסדרונות נגישים",
+                "חניה לאנשים עם מוגבלות בניידות",
+                "דלפק קבלה בגובה נגיש",
+                "שירותים נגישים"
+            ],
+            "specializedServices": "שירותים מיוחדים:",
+            "services": [
+                "שירות ליווי צוות (בתיאום מראש)",
+                "סיוע במילוי מסמכים",
+                "פורמטים חלופיים לתקשורת"
+            ]
         },
-        "features": {
-            "title": "תכונות נגישות",
-            "content": "האתר שלנו כולל תכונות כמו ניווט במקלדת, תאימות עם קוראי מסך, אפשרויות ניגודיות גבוהה, טקסט הניתן לשינוי גודל וטקסט חלופי לתמונות. אנחנו גם מספקים אפשרויות רב-לשוניות כדי לשרת את קהילת החולים המגוונת שלנו."
+        "webAccessibility": {
+            "title": "3. נגישות האתר",
+            "compliance": "עמידה בתקנים:",
+            "standards": [
+                "WCAG 2.1 Level AA - 95% עמידה",
+                "תקן ישראלי TI 5568",
+                "הנחיית הנגישות של האיחוד האירופי"
+            ],
+            "implementedFeatures": "תכונות מיושמות:",
+            "visualImpairment": {
+                "title": "למשתמשים עם לקות ראייה:",
+                "features": [
+                    "ניווט מלא במקלדת",
+                    "תואם ל-JAWS, NVDA, VoiceOver",
+                    "טקסטים חלופיים לתמונות",
+                    "ניגודיות גבוהה (4.5:1)",
+                    "הגדלת טקסט עד 200%"
+                ]
+            },
+            "hearingImpairment": {
+                "title": "למשתמשים עם לקות שמיעה:",
+                "features": [
+                    "חלופת טקסט לתוכן אודיו",
+                    "טפסי משוב נגישים",
+                    "ניווט ויזואלי ברור"
+                ]
+            },
+            "motorLimitations": {
+                "title": "למשתמשים עם מגבלות מוטוריות:",
+                "features": [
+                    "ניווט במקלדת",
+                    "זמן מספיק לאינטראקציה",
+                    "סדר פוקוס לוגי"
+                ]
+            },
+            "cognitiveImpairment": {
+                "title": "למשתמשים עם לקויות קוגניטיביות:",
+                "features": [
+                    "שפה פשוטה וברורה",
+                    "ניווט עקבי",
+                    "מזעור הסחות דעת"
+                ]
+            }
+        },
+        "languageSupport": {
+            "title": "4. תמיכה רב-לשונית",
+            "fullSupport": "תמיכה מלאה (3 שפות עיקריות):",
+            "mainLanguages": [
+                "🇬🇧 English - כל הדפים ותוכן מלא",
+                "🇷🇺 רוסית - גרסה מלאה של האתר",
+                "🇮🇱 עברית - כל החומרים זמינים"
+            ],
+            "basicSupport": "תמיכה בסיסית (4 שפות נוספות):",
+            "additionalLanguages": [
+                "🇩🇪 גרמנית - דפים עיקריים וניווט",
+                "🇦🇪 ערבית - חלקים עיקריים של האתר",
+                "🇫🇷 צרפתית - תוכן מרכזי",
+                "🇪🇸 ספרדית - דפים בסיסיים"
+            ],
+            "features": "תכונות:",
+            "featuresList": [
+                "כל 7 השפות כוללות תמיכה מלאה בתכונות נגישות",
+                "ממשק וניווט עובדים בכל השפות",
+                "תכונות נגישות (קוראי מסך, ניווט במקלדת, ניגודיות) עובדות באופן שווה בכל גרסאות השפה",
+                "מרחיבים בהדרגה תוכן לשפות נוספות"
+            ],
+            "note": "אנו עובדים כל הזמן על שיפור התמיכה הרב-לשונית ותרגום תוכן נוסף."
+        },
+        "technicalInfo": {
+            "title": "5. מידע טכני",
+            "testedIn": "נבדק ב: Chrome, Firefox, Safari, Edge",
+            "mobileSupport": "תמיכה במובייל: היענות מלאה",
+            "recommendedScreenReader": "קורא מסך מומלץ: NVDA (גרסה אחרונה)"
+        },
+        "limitations": {
+            "title": "6. מגבלות ידועות",
+            "intro": "אנו עובדים כל הזמן על שיפורים ומכירים בתחומים הבאים לפיתוח:",
+            "items": [
+                "ווידג'טים של צד שלישי: עשויים להיות בעלי נגישות מוגבלת",
+                "טפסים רפואיים מורכבים: דורשים אופטימיזציה נוספת",
+                "חומרי ארכיון: עשויים לא לעמוד במלואם בתקנים"
+            ]
+        },
+        "alternativeFormats": {
+            "title": "7. פורמטים חלופיים למידע",
+            "intro": "אם אינך יכול לגשת למידע באתר שלנו, נספק אותו בפורמט חלופי:",
+            "formats": [
+                "גרסה מודפסת",
+                "פורמט אודיו (תוך 7 ימי עסקים)",
+                "טקסט פשוט",
+                "ייעוץ אישי"
+            ]
         },
         "feedback": {
-            "title": "משוב וקשר",
-            "content": "אם אתה נתקל במכשולי נגישות או יש לך הצעות לשיפור, אנא צור איתנו קשר. אנחנו מעריכים את המשוב שלך ומחויבים לטפל בבעיות נגישות בזמן."
-        }
+            "title": "8. משוב ותמיכה",
+            "intro": "אנו מזמינים את המשוב וההצעות שלך לשיפור הנגישות.",
+            "contactInfo": "פרטי יצירת קשר:",
+            "email": "📧 אימייל: drtunitski@gmail.com",
+            "phone": "📞 טלפון: 0507377870",
+            "address": "📍 כתובת המרפאה: אלי לנדאו 7, הרצליה, ישראל",
+            "responseTime": "זמני תגובה:",
+            "responseTimes": [
+                "תגובה ראשונית: יומיים עסקים",
+                "פתרון בעיות: עד 7 ימי עסקים",
+                "תיקונים מורכבים: עד 30 יום"
+            ]
+        },
+        "legalBasis": {
+            "title": "9. בסיס משפטי",
+            "intro": "מדיניות הנגישות שלנו מבוססת על:",
+            "laws": [
+                "חוק שוויון זכויות לאנשים עם מוגבלות (תשנ\"ח-1998)",
+                "הנחיית הנגישות של האיחוד האירופי",
+                "הנחיות נגישות תוכן אינטרנט (WCAG) 2.1"
+            ]
+        },
+        "futureImprovements": {
+            "title": "10. שיפורים עתידיים",
+            "plan": "תוכנית ל-2026:",
+            "improvements": [
+                "הרחבת תמיכה רב-לשונית",
+                "שיפורי נגישות למובייל",
+                "ביקורות נגישות קבועות"
+            ]
+        },
+        "footer": "אנו מחויבים לשיפור מתמיד של נגישות השירותים שלנו ומזמינים את הצעותיך."
     }
 }
