--- a/public/locales/ru/accessibilityStatement.json
+++ b/public/locales/ru/accessibilityStatement.json
@@ -1,23 +1,153 @@
 {
     "title": "Заявление о доступности",
-    "description": "Наша приверженность веб-доступности",
-    "lastUpdated": "Последнее обновление: декабрь 2024",
+    "description": "Наша приверженность к доступности для всех пациентов",
+    "lastUpdated": "Последнее обновление: Октябрь 2025 года",
     "sections": {
-        "commitment": {
-            "title": "Наша приверженность",
-            "content": "Медицинская практика доктора Сергея Туницкого привержена обеспечению цифровой доступности для всех пользователей, включая людей с ограниченными возможностями. Мы стремимся предоставить доступный и инклюзивный опыт для всех, кто посещает наш веб-сайт."
+        "philosophy": {
+            "title": "1. Наша философия доступности",
+            "content": "Медицинская клиника Dr. Serge Tunitski считает доступность фундаментальным правом каждого пациента. Мы стремимся обеспечить равный доступ как к нашим физическим услугам, так и к цифровым ресурсам."
         },
-        "standards": {
-            "title": "Стандарты доступности",
-            "content": "Мы стремимся соответствовать стандартам Руководящих принципов доступности веб-контента (WCAG) 2.1 уровня AA. Наш веб-сайт разработан для доступности пользователей с различными ограниченными возможностями, включая зрительные, слуховые, физические, речевые, когнитивные и неврологические нарушения."
+        "physicalAccessibility": {
+            "title": "2. Доступность физической клиники",
+            "generalInfo": "Общая информация:",
+            "features": [
+                "Доступные входы и коридоры",
+                "Парковка для людей с ограниченной мобильностью",
+                "Регистрация на доступной высоте",
+                "Доступные санузлы"
+            ],
+            "specializedServices": "Специализированные услуги:",
+            "services": [
+                "Возможность сопровождения персоналом (по предварительной договоренности)",
+                "Помощь в заполнении документов",
+                "Альтернативные форматы коммуникации"
+            ]
         },
-        "features": {
-            "title": "Функции доступности",
-            "content": "Наш веб-сайт включает функции, такие как навигация с клавиатуры, совместимость с программами чтения с экрана, опции высокого контраста, изменяемый размер текста и альтернативный текст для изображений. Мы также предоставляем варианты на нескольких языках для обслуживания нашего разнообразного сообщества пациентов."
+        "webAccessibility": {
+            "title": "3. Доступность веб-сайта",
+            "compliance": "Соответствие стандартам:",
+            "standards": [
+                "WCAG 2.1 Level AA - 95% соответствия",
+                "Израильский стандарт TI 5568",
+                "Директива ЕС о доступности веб-сайтов"
+            ],
+            "implementedFeatures": "Реализованные функции:",
+            "visualImpairment": {
+                "title": "Для пользователей с нарушением зрения:",
+                "features": [
+                    "Полная навигация с клавиатуры",
+                    "Совместимость с JAWS, NVDA, VoiceOver",
+                    "Альтернативные тексты для изображений",
+                    "Высокая контрастность (4.5:1)",
+                    "Возможность увеличения текста до 200%"
+                ]
+            },
+            "hearingImpairment": {
+                "title": "Для пользователей с нарушением слуха:",
+                "features": [
+                    "Текстовая альтернатива аудиоконтенту",
+                    "Доступные формы обратной связи",
+                    "Четкая визуальная навигация"
+                ]
+            },
+            "motorLimitations": {
+                "title": "Для пользователей с моторными ограничениями:",
+                "features": [
+                    "Навигация с клавиатуры",
+                    "Достаточное время для взаимодействия",
+                    "Логический порядок фокуса"
+                ]
+            },
+            "cognitiveImpairment": {
+                "title": "Для пользователей с когнитивными нарушениями:",
+                "features": [
+                    "Простой и понятный язык",
+                    "Последовательная навигация",
+                    "Минимизация отвлекающих элементов"
+                ]
+            }
+        },
+        "languageSupport": {
+            "title": "4. Многоязычная поддержка",
+            "fullSupport": "Полная поддержка (3 основных языка):",
+            "mainLanguages": [
+                "🇬🇧 English - все страницы и полный контент",
+                "🇷🇺 Русский - полная версия сайта",
+                "🇮🇱 Иврит - весь материал доступен"
+            ],
+            "basicSupport": "Базовая поддержка (4 дополнительных языка):",
+            "additionalLanguages": [
+                "🇩🇪 Deutsch - основные страницы и навигация",
+                "🇦🇪 Арабский - главные разделы сайта",
+                "🇫🇷 Français - ключевой контент",
+                "🇪🇸 Español - базовые страницы"
+            ],
+            "features": "Особенности:",
+            "featuresList": [
+                "Все 7 языков имеют полную поддержку функций доступности",
+                "Интерфейс и навигация работают на всех языках",
+                "Функции доступности (скринридеры, клавиатурная навигация, контрастность) одинаково работают на всех языковых версиях",
+                "Постепенно расширяем контент на дополнительные языки"
+            ],
+            "note": "Мы постоянно работаем над улучшением языковой поддержки и переводом дополнительного контента."
+        },
+        "technicalInfo": {
+            "title": "5. Техническая информация",
+            "testedIn": "Тестировалось в: Chrome, Firefox, Safari, Edge",
+            "mobileSupport": "Мобильная поддержка: Полная адаптивность",
+            "recommendedScreenReader": "Рекомендуемый скринридер: NVDA (последняя версия)"
+        },
+        "limitations": {
+            "title": "6. Известные ограничения",
+            "intro": "Мы постоянно работаем над улучшением и признаем следующие области для развития:",
+            "items": [
+                "Сторонние виджеты: Могут иметь ограниченную доступность",
+                "Сложные медицинские формы: Требуют дополнительной оптимизации",
+                "Архивные материалы: Могут не полностью соответствовать стандартам"
+            ]
+        },
+        "alternativeFormats": {
+            "title": "7. Альтернативные форматы информации",
+            "intro": "Если вы не можете получить доступ к информации на нашем сайте, мы предоставим ее в альтернативном формате:",
+            "formats": [
+                "Печатная версия",
+                "Аудио-формат (в течение 7 рабочих дней)",
+                "Упрощенный текст",
+                "Личная консультация"
+            ]
         },
         "feedback": {
-            "title": "Обратная связь и контакты",
-            "content": "Если вы столкнулись с какими-либо барьерами доступности или у вас есть предложения по улучшению, пожалуйста, свяжитесь с нами. Мы приветствуем вашу обратную связь и привержены оперативному решению проблем доступности."
-        }
+            "title": "8. Обратная связь и поддержка",
+            "intro": "Мы приветствуем ваши отзывы и предложения по улучшению доступности.",
+            "contactInfo": "Контактная информация:",
+            "email": "📧 Email: drtunitski@gmail.com",
+            "phone": "📞 Телефон: 0507377870",
+            "address": "📍 Адрес клиники: Eli Landau 7, Herzliya, Israel",
+            "responseTime": "Сроки ответа:",
+            "responseTimes": [
+                "Первоначальный ответ: 2 рабочих дня",
+                "Решение проблем: до 7 рабочих дней",
+                "Сложные исправления: до 30 дней"
+            ]
+        },
+        "legalBasis": {
+            "title": "9. Правовая основа",
+            "intro": "Наша политика доступности основана на:",
+            "laws": [
+                "Законе о равных правах для людей с ограниченными возможностями (5758-1998)",
+                "Директиве ЕС о доступности веб-сайтов",
+                "Руководящих принципах доступности веб-контента (WCAG) 2.1"
+            ]
+        },
+        "futureImprovements": {
+            "title": "10. Будущие улучшения",
+            "plan": "План на 2026 год:",
+            "improvements": [
+                "Расширение языковой поддержки",
+                "Улучшение мобильной доступности",
+                "Регулярные аудиты доступности"
+            ]
+        },
+        "footer": "Мы стремимся к постоянному улучшению доступности наших услуг и приветствуем ваши предложения."
     }
 }
